# gr0m_mem

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  UNIVERSAL_PROMPT.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bench.yml  ci.yml  fork-watch.yml  release.yml
benchmarks/: README.md
benchmarks/locomo/: run.py
benchmarks/longmemeval/: run.py
benchmarks/loop_prevention/: run.py  scenarios.json
benchmarks/results/: 2026-04-08-loop-prevention.json
docs/: integrations.md
gr0m_mem/: __init__.py  __main__.py  brain.py  cli.py  config.py  fact_checker.py  mcp_server.py  types.py  wakeup.py
gr0m_mem/graph/: __init__.py  kg.py  store.py  temporal.py  traverse.py
gr0m_mem/hooks/: precompact_hook.sh  save_hook.sh
gr0m_mem/store/: __init__.py  base.py  chroma.py  chunking.py  embedding.py  sqlite_fts.py  sqlite_vec.py
tests/integration/: test_hook_cli.py
tests/temporal/: test_edge.py  test_kg.py  test_store.py  test_traverse.py
tests/unit/: test_backend_selection.py  test_brain_fusion.py  test_chunking.py  test_loop_prevention_bench.py  test_sqlite_fts.py  test_sqlite_vec.py  test_types.py  test_wakeup.py
